--- a/style.css
+++ b/style.css
@@ -20,8 +20,10 @@
     display: flex;
     font-size: 18px;
 }
-.item{
+.item > a{
     margin-right: 25px;
+    text-decoration: none;
+    color: white;
 }
 
 /* Navbar Styling End*/
